# PeopleTrackingSystem2.0

./: .gitignore  CMakeLists.txt  hist.ext
src/: BGSDetector.cpp  BGSDetector.h  DataAssociation.cpp  DataAssociation.h  Detector.cpp  Detector.h  HOGDetector.cpp  HOGDetector.h  Histogram.cpp  ParticleFilterTracker.cpp  ParticleFilterTracker.h  main.cpp
